[package]
name = "usb-disk-probe"
version = "0.2.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"
description = """
Provides a stream type which can be used to probe for USB storage devices in the system.
"""
repository = "https://github.com/pop-os/usb-disk-probe"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["usb", "device", "probe", "linux"]
categories = ["asynchronous", "os::unix-apis"]

[dependencies]
futures = "0.3"
thiserror = "1.0.37"

[dependencies.tokio]
version = "1.21.2"
features = ["fs"]